--- a/css/bodystyle.css
+++ b/css/bodystyle.css
@@ -30,6 +30,26 @@ hr {
 
 }
 
+.tab {
+  border: 2px solid black;
+  border-collapse: collapse;
+
+}
+
+.tabh {
+  border: 2px solid black;
+  border-collapse: collapse;
+
+
+}
+
+.tabd {
+  border: 2px solid black;
+  border-collapse: collapse;
+  text-align: right;
+
+}
+
 .SectionTitle {
   padding: 20px;
   font-size: 30px;
