--- a/styles/bodystyle.css
+++ b/styles/bodystyle.css
@@ -29,6 +29,10 @@ hr {
   background-color: black;;
 
 }
+img {
+
+
+}
 
 #colonytab {
   border: 2px solid black;
@@ -65,6 +69,11 @@ hr {
 .SectionTitle {
   padding: 20px;
   font-size: 30px;
+
+}
+
+.SectionTitle {
+
 
 }
 
