added css img dimensions

--- a/styles/bodystyle.css
+++ b/styles/bodystyle.css
@@ -5,7 +5,6 @@
 
 body {
   min-width: 1250px;
-
 }
 
 p {
@@ -30,7 +29,12 @@ hr {
 
 }
 img {
+  height: 250px;
 
+}
+
+.headerimgheight {
+  height: 100px;
 
 }
 
@@ -69,6 +73,8 @@ img {
 .SectionTitle {
   padding: 20px;
   font-size: 30px;
+  font-style: oblique;
+  font-weight:normal;
 
 }
 
@@ -94,7 +100,7 @@ img {
 
 }
 
-img[height] {
+img[class] {
   border-radius: 10px;
 
 }
